[package]
name = "shreds-subcribe"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "macros", "fs","net"] }
anyhow = "1.0.98"
solana-ledger = { git = "https://github.com/jito-foundation/jito-solana.git", branch = "eric/v2.2-merkle-recovery", package = "solana-ledger" }
solana-streamer = "2.2.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "chrono"] }
tracing = "0.1.41"
ahash = "0.8.12"
solana-sdk = "=2.2.1"
solana-entry = "2.2.1"
itertools = "0.14.0"
bincode = "1.3.3"
crossbeam-channel = "0.5.15"