[package]
name = "shreds-subcribe"
version = "0.1.0"
edition = "2024"

[dependencies]

# solana-ledger = { git = "https://github.com/jito-foundation/jito-solana.git", branch = "eric/v2.2-merkle-recovery", package = "solana-ledger" }
# solana-streamer = "2.2.1"
# solana-sdk = "=2.2.1"
# solana-entry = "2.2.1"

solana-ledger = { git = "https://github.com/zhouwei0192/agave-fix.git", branch = "shreds-fix", package = "solana-ledger" }
solana-streamer = "2.3.7"
solana-sdk = "2.3.1"
solana-entry = "2.3.7"


tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "macros", "fs","net"] }
anyhow = "1.0.98"
tracing-subscriber = { version = "0.3", features = ["fmt", "chrono"] }
tracing = "0.1.41"
ahash = "0.8.12"
itertools = "0.14.0"
bincode = "1.3.3"
crossbeam-channel = "0.5.15"